    including static supplement files (e.g., graphics or datasets). This
    essentially just calls file.copy() but facilitates finding supplement
    files that are available along with the .Rnw/.Rmd exercise files.

  o In exams2nops() the argument 'blank' can now be a vector of length 2
    with the number of blank pages before and after the extra "pages".
    
  o Bug fix in extract_extra() which prevented that "exextra" metainformation
    was read correctly in the previous version.
    
  o Improvement in xexams() to better support using the same exercise template
    several times within the same exam (e.g., for generating a single PDF
    with multiple versions of the same exercise). The temporary file names
    employed are now run through make.unique() first.
    
  o Improvement in exams2pdf() to assure that duplication in file names for
    graphics (across exercises within the same exam) are handled correctly.

  o Within several exams2xyz() functions gsub(...) calls were changed to
    gsub(..., fixed = TRUE) for replacing placeholders that potentially
    have slashes.
    
  o xweave() gained an argument engine=NULL that can optionally be set to
    engine="knitr" to enable processing Rnw exercises by knitr::knit() instead
    of the default utils::Sweave().


Changes in Version 2.1-0

  o Exercises can now either be in .Rnw format (R/LaTeX, as in previous versions)
    or in .Rmd format (R/Markdown). A new function xweave() is provided for
    weaving either format by either calling utils::Sweave() for .Rnw and
    knitr::knit() for .Rmd. If .Rmd exercises are used, the weaved exercises
    require conversion by pandoc (see below).

  o The vignettes have not yet been updated to incorporate the R/Markdown
    information or the new interfaces described below. For examples and some
    introductory comments, exams_skeleton() can generate demo scripts.

  o Added new make_exercise_transform_pandoc() transfomer generator, interfacing