@@ -2,7 +2,8 @@ exams2nops <- function(file, n = 1L, dir = NULL, name = NULL,
   language = "en", title = "Exam", course = "",
   institution = "R University", logo = "Rlogo.png", date = Sys.Date(), 
   replacement = FALSE, intro = NULL, blank = NULL, duplex = TRUE, pages = NULL,
-  usepackage = NULL, header = NULL, encoding = "", startid = 1L, points = NULL, showpoints = FALSE, ...)
+  usepackage = NULL, header = NULL, encoding = "", startid = 1L, points = NULL,
+  showpoints = FALSE, samepage = FALSE, ...)
 {
   ## pages could include formulary and distribution tables
   if(!is.null(pages)) pages <- sapply(pages, file_path_as_absolute)
@@ -74,7 +75,7 @@ exams2nops <- function(file, n = 1L, dir = NULL, name = NULL,
   template <- file.path(tempdir(), "nops.tex")
   make_nops_template(length(file), replacement = replacement, intro = intro,
     blank = blank, duplex = duplex, pages = pages,
-    file = template, nchoice = nchoice, encoding = encoding)
+    file = template, nchoice = nchoice, encoding = encoding, samepage = samepage)
 
   ## if points should be shown generate a custom transformer
   transform <- if(showpoints) {
@@ -110,7 +111,7 @@ exams2nops <- function(file, n = 1L, dir = NULL, name = NULL,
 }
 
 make_nops_template <- function(n, replacement = FALSE, intro = NULL, blank = NULL,
-  duplex = TRUE, pages = NULL, file = NULL, nchoice = 5, encoding = "")
+  duplex = TRUE, pages = NULL, file = NULL, nchoice = 5, encoding = "", samepage = FALSE)
 {
 page1 <- make_nops_page(n, nchoice = nchoice)
 page2 <- if(replacement) {
@@ -181,9 +182,14 @@ if(enc != "") sprintf('\\usepackage[%s]{inputenc}', enc) else NULL,
 
 %% for exams2pdf
 \\newenvironment{question}{\\item}{}
-\\newenvironment{solution}{\\comment}{\\endcomment}
-\\newenvironment{answerlist}{\\renewcommand{\\labelenumi}{(\\alph{enumi})}\\begin{enumerate}}{\\end{enumerate}}
+\\newenvironment{solution}{\\comment}{\\endcomment}",
 
+if(samepage) {
+  "\\newenvironment{answerlist}{\\renewcommand{\\labelenumi}{(\\alph{enumi})}\\begin{samepage}\\begin{enumerate}}{\\end{enumerate}\\end{samepage}}"
+} else {
+  "\\newenvironment{answerlist}{\\renewcommand{\\labelenumi}{(\\alph{enumi})}\\begin{enumerate}}{\\end{enumerate}}"
+},
+"
 %% additional header commands
 \\makeatletter
 \\newcommand{\\ID}[1]{\\def\\@ID{#1}}
