@@ -21,6 +21,10 @@ Changes in Version 2.2-0
 
   o In exams2nops() the argument 'blank' can now be a vector of length 2
     with the number of blank pages before and after the extra "pages".
+
+  o Added argument samepage=FALSE in exams2nops(). If set to TRUE, this adds
+    a {samepage} environment around the question and solution lists in order
+    to prevent page breaks within these lists.
     
   o Bug fix in extract_extra() which prevented that "exextra" metainformation
     was read correctly in the previous version.
